# hivemind

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  awesome-use-cases.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.github/workflows/: cd.yml  ci.yml  docs.yml
chaos/: fault_injection_test.py
docs/: architecture.md
docs-site/: README-conversao.md  astro.config.mjs  docker-compose.yml  package-lock.json  package.json
docs-site/k8s/: deployment.yaml  ingress.yaml  service.yaml
examples/: run-enterprise-demo.sh
frontend-next/: README.md  next.config.js  package-lock.json  package.json
frontend-next/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend-next/app/: layout.tsx  page.tsx
frontend-react/: App.jsx  package.json
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
load-tests/: k6-workflows.js
python_app/: main.py
scripts/: run-demo.sh  setup.sh
soak/: soak_test.sh
src/: agents.ts  config.ts  index.ts  orchestrator.ts  server.ts  types.ts
src/agents/: agents.ts
src/ai_agent_demo/: config.py  main.py  models.py  observability.py  orchestrator.py  rate_limit.py  security.py  tools.py  (+1 more)
tests/: basic-example.test.ts  cli.smoke.test.ts  config.test.ts  failure-scenarios.test.ts  http-endpoints.test.ts  http-stats.test.ts  orchestrator.test.ts  test_api_integration.py  test_fastapi_demo.py  test_orchestrator_logic.py  test_security_and_metrics.py  test_utils_coverage.py
(+37 files in other folders)
